// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Box Different padding for different screen sizes  1`] = `
<div
  className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
>
  <div
    className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 cuxncB"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 fXWqCD Boxstories__StyledBox-sc-1599xyf-1 iJkTua"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
        >
          Some random content here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Margin 1`] = `
<div
  className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
>
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 cYJaqD"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 fXWqCD Boxstories__StyledBox-sc-1599xyf-1 iJkTua"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
      >
        Some random content here
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Margin and different margin Y-axis 1`] = `
<div
  className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
>
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 hrEPdt"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 fXWqCD Boxstories__StyledBox-sc-1599xyf-1 iJkTua"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
      >
        Some random content here
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Padding  1`] = `
<div
  className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
>
  <div
    className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 dsDbLG"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 fXWqCD Boxstories__StyledBox-sc-1599xyf-1 iJkTua"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
        >
          Some random content here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Box Padding and different X-axis and left  1`] = `
<div
  className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
>
  <div
    className="Boxstories__Outer-sc-1599xyf-0 jHwrE"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 jNpPpC"
    >
      <div
        className="Box__StyledDiv-sc-1bfv3i9-0 fXWqCD Boxstories__StyledBox-sc-1599xyf-1 iJkTua"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
        >
          Some random content here
        </span>
      </div>
    </div>
  </div>
</div>
`;
